# data-store

./: .gitignore  .pytest.ini  Dockerfile  Makefile  README.md  pyproject.toml
.ci-config/: data_store.yaml
.configs/: data_store.yaml
.github/workflows/: ci.yaml  sync-to-A-Team-VPL.yaml
data_store/: __init__.py  abstract.py  models.py  store.py
data_store/adapters/: __init__.py  minio_adapter.py
docs/: conf.py  getting_started.md  index.md  index.rst
docs/_static/: .gitkeep
docs/_templates/: .gitkeep
docs/api_reference/: abstract_base_classes.md  adapters.md  configuration_classes.md  index.md  models.md  modules.rst  presigned_urls.md
docs/development/: best_practices.md  index.md  nosql_store.md  object_store.md
docs/user_guides/: best_practices.md  index.md  nosql_store.md  object_store.md  presigned_urls_usage.md
src/data_store/: __init__.py  abstract.py  models.py  store.py
src/data_store/adapters/: minio_adapter.py
src/data_store/nosql_store/: __init__.py  abstract.py  configurations.py  nosql_store.py
src/data_store/nosql_store/adapters/: __init__.py  mongodb_adapter.py
src/data_store/object_store/: __init__.py  abstract.py  configurations.py  store.py
src/data_store/sql_store/: __init__.py  abstract.py  configurations.py  helper.py  sql_store.py
tests/e2e/: test_client.py  test_mongodb.py  test_v2_functions.py
tests/e2e/data/: date_data.csv
tests/mongodb/: conftest.py
tests/mongodb/edge_cases/: conftest.py  test_authentication_errors.py  test_bulk_edge_cases.py  test_connection_failures.py  test_context_edge_cases.py  test_data_edge_cases.py  test_error_handling.py
tests/mongodb/integration/: test_basic_operations.py  test_connection_pooling.py  test_context_manager.py
tests/mongodb/unit/: conftest.py  test_bulk_operations.py  test_configurations.py  test_connection.py  test_crud_operations.py
tests/object_store/: __init__.py  test_presigned_urls.py
(+5 files in other folders)
