[tool.poetry]
name = "tex-corver-data-store"
version = "0.1.0"
description = "A simple data storage library"
authors = ["Long Le <hjjddbz@gmail.com>"]
readme = "README.md"
packages = [{ include = "data_store", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12"
pydantic = "^2.8.0"
icecream = "^2.1.3"
minio = "^7.2.7"

tex-corver-utils = { git = "git@github.com:tex-corver/utils.git" }
pre-commit = "3.8.0"
